PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Updated the PEL init.el template to better support benchmark-init on Emacs 30.
  - The version of init.el is now 0.3.  PEL now requires that version to support fast startup,
    even on old systems.  This is a *breaking change* but it's easy to fix: just update your
    init.el file to comply with the new [[https://github.com/pierre-rouleau/pel/blob/master/example/init/init.el][init template.]]
    - You will only be required to update it if you want to use the PEL package statistics or switch to
      the fast startup mode.
- The *pel-emacs-load-stats* command now also show Emacs startup time.
- Fix the re-installation of the *indent-tools-hydra/body* key binding to ~<f7> <TAB>~ when *pel-init* is re-executed.
  That happens when we need to re-initialize after changing a *pel-use-...* user option and want to activate it without leaving
  Emacs.  It's also useful when PEL is re-built inside a different process, modifying the .el and .elc files and we want to re-load
  everything without leaving Emacs.  In the past the key binding to indent-tools-hydra/body was not re-installed because of the
  special way PEL treats the hydra logic.  for more information, see the comments at the end of pel_keys.el.
  This fix should help reloading PEL by just re-executing *pel-init*.
- Fix edge-case in completion mode management: executing *pel-init* to re-initialize PEL re-establishes
  the user selected options properly.  Previous code changed the settings and changed the completion mode
  being used.  This bug was affecting PEL for a while.
  - Also added information printed by *pel-show-active-completion-mode* : the name of the customizable user-option
    that controls the selection of the various supported completion modes.
- Add *pel-show-symbol* bound to ~<f11> ? S~.  A simple utility to print the symbol name and value.