@@ -56,6 +56,7 @@
 (require 'pel--base)                    ; use: `pel-print-in-buffer'
 (require 'pel--options)
 (require 'pel-prompt)                   ; use: `pel-prompt'
+(require 'pel-setup-base)               ; use: `pel--startup-mode'
 ;;; --------------------------------------------------------------------------
 ;;; Code:
 ;;
@@ -135,7 +136,7 @@ With \\[universal-argument] \\[universal-argument] prefix, also print content of
            (boundp  'package-activated-list))
       (let ((numeric-arg   (prefix-numeric-value with-details))
             (overview-msg  (format "\
-- Emacs startup time: %s
+- Emacs startup time: %s   (in %s mode)
 # loaded files      : %d
 # load-path length  : %d
 # features          : %d
@@ -143,6 +144,7 @@ With \\[universal-argument] \\[universal-argument] prefix, also print content of
 # packages activated: %d
 # packages selected : %d"
                                    (emacs-init-time)
+                                   (pel--startup-mode)
                                    (length load-history)
                                    (length load-path)
                                    (length features)
